<resources>
    <string name="app_name">链花</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">首页</string>
    <string name="hello_blank_fragment2">消息</string>
    <string name="hello_blank_fragment3">订单</string>
    <string name="hello_blank_fragment4">我的</string>

    <string name="hint_login_username">请输入手机号码</string>
    <string name="hint_login_password">输入验证码</string>
    <string name="login">登录</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="please_input_limit_pwd">请输入数字或字母</string>

    <!-- LoginActivity-->
    <string name="automaticLogin">下次自动登陆</string>
    <string name="username_null">手机号不能为空</string>
    <string name="password_null">验证码不能为空</string>
    <string name="phone_illegal">手机号不合法</string>
    <string name="loginsuccess">登录成功</string>
    <string name="captcha">获取验证码</string>
    <string name="new_register">注册</string>

    <!--RegisterActivity-->
    <string name="register">注册</string>
    <string name="back_login">返回登录</string>
    <string name="registerSuccess">注册成功</string>

    <!--InsuranceActivity-->
    <string name="subscribe">预约投保</string>
    <string name="subscribe1">预 约 投 保</string>
    <string name="introduce">保险介绍</string>
    <string name="agreed">同意《保险条例》</string>
    <string name="rates">保险费率：%1$s</string>
    <string name="central">中央%1$s</string>
    <string name="longtou">龙头企业%1$s</string>
    <string name="personal">农户%1$s</string>
    <string name="policy">保单%1$s个月</string>
    <string name="sheng">省%1$s</string>
    <string name="shi">市%1$s</string>
    <string name="xian">县%1$s</string>
    <string name="xiang">乡%1$s</string>
    <string name="qita">其他%1$s</string>

    <!--InsuranceParticularsActivity-->
    <string name="object">有效日期：%1$s</string>
    <string name="price">单位保金：%1$s</string>
    <string name="properties">保险性质：%1$s</string>


    <string name="shiyi">释义</string>
    <string name="shiyiyu">第三十五条 本保险合同涉及下列术语时,适用下列释义:</string>
    <string name="one">（一）暴雨：指骤雨量每小时在16mm以上，或连续12小时降雨量达30mm以上，或连续24小时降雨量达50mm以上。</string>
    <string name="two">（二）洪水：指山洪暴发、江河泛滥、潮水上岸及倒灌或暴雨积水。规律性涨潮、海水倒灌、自动灭火设施漏水以及常年水位线以下或地下渗水、水管爆裂不属洪水责任。</string>
    <string name="three">（三）内涝：由于降水过多，地面积水不能及时排除，农田积水超过作物耐淹能力，造成作物减产。</string>
    <string name="four">四）风灾：本条款的风灾责任以县级以上农业部门和气象部门出具的风灾鉴定证明为准。</string>
    <string name="five">（五）雹灾：指在对流性天气控制下，积雨云中凝结生成的冰块从空中降落，造成作物严重的机械损伤而带来的损失。</string>
    <string name="six">（六）冻灾：指因遇到0℃以下或长期持续在0℃以下的温度，引起植株体冰冻或是丧失一切生理活力，造成植株死亡或部分死亡等现象。</string>
    <string name="seven">（七）生荒地：新开垦的、种植时间在三年以下的土地。</string>
    <string name="eight">（八）重大过失：指行为人不但没有遵守法律规范对其较高要求，甚至连人们都应当注意并能注意的一般标准也未达到的行为。</string>
    <string name="nine">（九）各生长期赔偿比例：是指根据农作物各生长期物化成本的转化比例设定的赔偿标准。</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--InsuranceOrderActivity-->
    <string name="policy_holder">投保人：</string>
    <string name="id_crad">身份证号：</string>
    <string name="address">联系地址：</string>


    <!--CooperativeOrganizationActivity-->
    <string name="coop_team">组成成员</string>
    <string name="coop_vote">投票议事</string>
    <string name="coop_insurancepolicy">集体保单</string>
    <string name="coop_guarantee">我的承保人</string>
    <string name="synopsis">小棉袄简介</string>
    <string name="dynamic">———— 合作社动态 ————</string>

    <!--消息模块-->
    <string name="news_title">消息</string>
    <!--订单模块-->
    <string name="order_title">我的订单</string>

    <!--HeadLineActivity链花头条-->
    <string name="head_title">链花头条</string>
    <!--NewsActivity推荐资讯-->
    <string name="news">新闻资讯</string>

    <string name="image">图片</string>
    <string name="confirm">确定</string>
    <string name="preview">预览</string>
    <string name="select">选择</string>
</resources>
