<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:gravity="center">

        <com.lianghuawang.cottonfarmer.widget.CircleImageView
            android:id="@+id/image_login_circleImageview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_launcher" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/logo"
        android:layout_marginTop="30dp"
        android:layout_weight="1.2"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="13dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_mobile_flag" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_login_username"
                android:inputType="number"
                android:maxLength="11"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/color_999999"
                android:textColorHint="@color/color_999999"
                android:textSize="14dp" />

            <ImageView
                android:id="@+id/iv_clean_phone"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:scaleType="centerInside"
                android:src="@drawable/ic_clear"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_eeeeee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="13dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_password_flag" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_login_password"
                android:inputType="textPassword"
                android:maxLength="30"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/color_999999"
                android:textColorHint="@color/color_999999"
                android:textSize="14dp" />

            <ImageView
                android:id="@+id/clean_password"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:scaleType="centerInside"
                android:src="@drawable/ic_clear"
                android:visibility="gone" />

            <!--<ImageView-->
                <!--android:id="@+id/iv_show_pwd"-->
                <!--android:layout_width="40dp"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:scaleType="centerInside"-->
                <!--android:src="@drawable/pass_gone" />-->
        </LinearLayout>

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1px"-->
        <!--android:background="@color/color_eeeeee" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/check_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/automaticLogin"
                android:textColor="@color/login_automatic"
                android:textSize="14dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn_login_selected"
            android:text="@string/login"
            android:textColor="@color/color_ffffff"
            android:textSize="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5px"
            android:background="@color/color_eeeeee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/regist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="1"
                android:text="注册新用户"
                android:textColor="@color/color_b0b8b2"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginLeft="21dp"
                android:text="@string/login_forget_pwd"
                android:textColor="@color/color_b0b8b2"
                android:textSize="16dp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="horizontal">

    </RelativeLayout>
</LinearLayout>