<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    android:clipToPadding="true">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y48"
        android:background="@color/colorPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y450"
        android:layout_below="@id/view"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/image_login_circleImageview"
            android:layout_width="@dimen/x150"
            android:layout_height="@dimen/y150"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/y100"
            android:src="@mipmap/logo1" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_register_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x24"
        android:layout_marginTop="@dimen/y100"
        android:src="@drawable/back1"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/y30"
        android:layout_marginTop="@dimen/y400"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--手机号-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x80"
                android:layout_marginRight="@dimen/y80"
                android:layout_marginTop="@dimen/y100"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="0dp">

                    <EditText
                        android:id="@+id/et_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/color_eeeeee"
                        android:drawableLeft="@drawable/ic_mobile_flag"
                        android:hint="@string/hint_login_username"
                        android:inputType="number"
                        android:maxLength="11"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:textColor="@color/color_999999"
                        android:textColorHint="@color/color_999999"
                        android:textSize="15dp" />

                </android.support.v7.widget.CardView>
            </LinearLayout>

            <!--验证码-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x80"
                android:layout_marginRight="@dimen/y80"
                android:layout_marginTop="@dimen/y50"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/x250"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="0dp">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/color_eeeeee"
                        android:drawableLeft="@drawable/ic_password_flag"
                        android:hint="@string/hint_login_password"
                        android:inputType="number"
                        android:maxLength="6"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:textColor="@color/color_999999"
                        android:textColorHint="@color/color_999999"
                        android:textSize="14dp" />

                </android.support.v7.widget.CardView>

                <Button
                    android:id="@+id/btn_login_captcha"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/bg_btn_login_selected"
                    android:text="@string/captcha"
                    android:textColor="@color/color_ffffff" />
            </RelativeLayout>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/y100"
                android:layout_marginLeft="@dimen/x150"
                android:layout_marginRight="@dimen/x150"
                android:layout_marginTop="@dimen/y70"
                android:background="@drawable/bg_btn_login_selected"
                android:text="@string/register"
                android:textColor="@color/color_ffffff"
                android:textSize="18dp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>